--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	</head>
 	<body>
 		<h1>Site under construction</h1>
-		<p>While you're waiting you can go checkout <a href="https://mazelike.ryan3r.com">Mazelike</a>.  It's a dungeon crawling browser game.</p>
+		<ul>
+			{% for project in site.projects %}
+				<li>
+					<h2>{{project.title}}</h2>
+					<p>{{project.content | markdownify}}</p>
+				</li>
+			{% endfor %}
+		</ul>
 	</body>
 </html>
 
