Add edit links for projects and notes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 title: Projects
 ---
+<div class="align-right" style="margin-right: 10px;">
+	<a href="https://github.com/ryan3r/ryan3r.github.io/master/_projects" class="edit">Edit on Github</a>
+</div>
 <div class="projects">
 	{% for project in site.projects %}
 		<div class="project{% if project.thumbnail %} project-wide{% endif %}">
