--- a/notes.html
+++ b/notes.html
@@ -2,6 +2,9 @@
 title: Notes
 ---
 <div class="content">
+    <div class="align-right">
+        <a href="https://github.com/ryan3r/ryan3r.github.io/master/_notes" class="edit">Edit on Github</a>
+    </div>
     <ul class="note-list">
         {% for note in site.notes %}
             <li class="note-list-item">
