Fix Edit on Github links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Projects
 ---
 <div class="align-right" style="margin-right: 10px;">
-	<a href="https://github.com/ryan3r/ryan3r.github.io/master/_projects" class="edit">Edit on Github</a>
+	<a href="https://github.com/ryan3r/ryan3r.github.io/tree/master/_projects" class="edit">Edit on Github</a>
 </div>
 <div class="projects">
 	{% for project in site.projects %}
