--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,7 @@ title: Notes
 ---
 <div class="content">
     <div class="align-right">
-        <a href="https://github.com/ryan3r/ryan3r.github.io/master/_notes" class="edit">Edit on Github</a>
+        <a href="https://github.com/ryan3r/ryan3r.github.io/tree/master/_notes" class="edit">Edit on Github</a>
     </div>
     <ul class="note-list">
         {% for note in site.notes %}
