--- a/settings.html
+++ b/settings.html
@@ -1,6 +1,8 @@
 ---
 ---
-<h2>Edit mode</h2>
-<p>Addes edit on github links to pages.</p>
-<a class="edit-toggle"></a>
+<div class="content">
+    <h2>Edit mode</h2>
+    <p>Addes edit on github links to pages.</p>
+    <a class="edit-toggle"></a>
+</div>
 <script src="/assets/js/settings.js"></script>
